// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`result actions insight analytics actions when analyticsMode is \`next\` logCreateArticle should call relay.emit properly 1`] = `
[
  "InsightPanel.CreateArticle",
  {
    "articleType": "Knowledge__kav",
    "context": {
      "caseNumber": "5678",
      "targetId": "1234",
      "targetType": "Case",
    },
  },
]
`;

exports[`result actions insight analytics actions when analyticsMode is \`next\` logExpandToFullUI should call relay.emit properly 1`] = `
[
  "InsightPanel.ExpandToFullUI",
  {
    "context": {
      "caseNumber": "5678",
      "targetId": "1234",
      "targetType": "Case",
    },
  },
]
`;
